@@ -9,6 +9,8 @@ PHP                                                                        NEWS
     (marcio dot web2 at gmail dot com)
   . Fixed bug #70321 (Magic getter breaks reference to array property).
     (Laruence)
+  . Fixed bug #70187 (Notice: unserialize(): Unexpected end of serialized data)
+    (Dmitry)
   . Fixed bug #70145 (From field incorrectly parsed from headers). (Anatol)
   . Fixed bug causing exception traces with anon classes to be truncated. (Bob)
 
